Fix z-index slider sound

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -465,6 +465,7 @@ div#slider-vertical {
 	position: absolute;
 	top: 0;
 	right: 0;
+	z-index: 99;
 }
 
 #tooltip_volume_slider {
